<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>cz.martlin</groupId>
	<artifactId>jmop</artifactId>
	<packaging>jar</packaging>
	<version>1.2</version>

	<name>jmop</name>
	<url>https://github.com/martlin2cz/jmop</url>

	<developers>
		<developer>
			<name>m@rtlin</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>



	<dependencies>
		<!-- JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<!-- JavaFX -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>11.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>11.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>11.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>11.0.2</version>
		</dependency>
		<!-- logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.11.0</version>
		</dependency>


		<!-- youtube API libraries -->
		<!-- https://developers.google.com/youtube/v3/quickstart/java -->
		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>1.30.0</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.google.oauth-client</groupId>
			<artifactId>google-oauth-client-jetty</artifactId>
			<version>1.30.5</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.google.apis</groupId>
			<artifactId>google-api-services-youtube</artifactId>
			<version>v3-rev221-1.25.0</version>
			<scope>compile</scope>
		</dependency>

		<!-- SVG graphics support for JavaFX -->
		<!-- https://github.com/codecentric/javafxsvg -->
		<!-- XXX -->
		<!-- <dependency> -->
		<!-- <groupId>de.codecentric.centerdevice</groupId> -->
		<!-- <artifactId>javafxsvg</artifactId> -->
		<!-- <version>1.3.0</version> -->
		<!-- </dependency> -->

	</dependencies>

	<pluginRepositories>
		<pluginRepository>
			<id>gluon-releases</id>
			<url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>

		<plugins>

		
		
      		<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>3.8.1</version>
		        <configuration>
                   <compilerArgs>
		        	    <arg>--add-opens</arg>
		        	    <arg>javafx.graphics/com.sun.javafx.application=jmop</arg>
		        	    <arg>--add-module</arg>
		        	    <arg>google.oauth.client,google.http.client.jackson2,google.api.services.youtube.v3.rev221</arg>
        		  </compilerArgs>
		        </configuration>
		        
	      	</plugin>
	      
			<plugin>
			    <groupId>org.openjfx</groupId>
			    <artifactId>javafx-maven-plugin</artifactId>
			    <version>0.0.4</version>
			    <configuration>
			        <mainClass>cz.martlin.jmop.mains.JMOPMainGUIApplication</mainClass>
			        <launcher>launch-jmop</launcher>
			        <jlinkImageName>jmop-image</jlinkImageName>
			        <jlinkZipName>jmop-zip</jlinkZipName>
			    </configuration>
			</plugin>
			
<!-- 			<plugin> -->
<!-- 				<groupId>com.zenjava</groupId> -->
<!-- 				<artifactId>javafx-maven-plugin</artifactId> -->
<!-- 				<version>8.8.3</version> -->
<!-- 				<configuration> -->
<!-- 					<mainClass>cz.martlin.jmop.mains.JMOPMainGUIApplication</mainClass> -->
<!-- 				</configuration> -->
<!-- 			</plugin> -->

 			<plugin> 
 				<groupId>com.gluonhq</groupId> 
 				<artifactId>client-maven-plugin</artifactId> 
 				<version>0.1.15</version> 
 				<configuration> 
 					<mainClass>cz.martlin.jmop.mains.JMOPGUIApp</mainClass> 
 					<reflectionList>
 						<list>org.apache.logging.log4j.message.DefaultFlowMessageFactory</list>
 						<list>org.apache.logging.log4j.message.ParameterizedMessageFactory</list>
 						<list>cz.martlin.jmop.mains.JMOPMainGUIApplication</list>
 					</reflectionList>
 					<bundlesList>
 						<list>cz.martlin.jmop.gui.local.messages</list>
 					</bundlesList>
						<!--	<graalvmHome>/home/martin/applications/java-stuff/graalvm/graalvm-ce-java11-19.3.1</graalvmHome> -->
				</configuration> 
 			</plugin> 
		</plugins>
	</build>
</project>
